[gd_scene load_steps=5 format=2]

[ext_resource path="res://brokenfloor.png" type="Texture" id=1]
[ext_resource path="res://scripts/temporaryPlatform.gd" type="Script" id=2]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 1 )

[node name="temporaryPlatform" type="RigidBody2D"]
collision_mask = 16
mode = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4.54747e-13 )
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="detectPlayer" type="Area2D" parent="."]

[node name="playerOnPlatform" type="CollisionShape2D" parent="detectPlayer"]
modulate = Color( 0.290196, 1, 0, 1 )
position = Vector2( 0, -7 )
shape = SubResource( 2 )

[node name="enableTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="disableTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_temporaryPlatform_body_entered"]
[connection signal="body_entered" from="detectPlayer" to="." method="_on_detectPlayer_body_entered"]
[connection signal="body_exited" from="detectPlayer" to="." method="_on_detectPlayer_body_exited"]
[connection signal="timeout" from="enableTime" to="." method="_on_tempTime_timeout"]
[connection signal="timeout" from="disableTime" to="." method="_on_testTime_timeout"]
